shiori/Deployment-shiori.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: shiori
  name: shiori
  namespace: shiori
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: shiori
  template:
    metadata:
      labels:
        app.kubernetes.io/name: shiori
    spec:
      containers:
        - args:
            - serve
            - --address
            - 0.0.0.0
            - --port
            - "8080"
          image: ghcr.io/go-shiori/shiori:v1.5.5
          name: shiori
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /data
              name: data
      securityContext:
        fsGroup: 2000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: shiori
