shiori/CiliumNetworkPolicy-allow-https-world-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-https-world-egress
  namespace: shiori
spec:
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: shiori
